--- a/css/style.css
+++ b/css/style.css
@@ -17,4 +17,12 @@ body {
 	padding: 0 45px 20px;
 }
 
+.small {
+    font-size: 0.8em;
+}
+
+h1 h2 {
+  color: rgb(146,175,166);
+}
+
 /* Write all remaining styles here */
