--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@ body {
 	background: #F3EBE9;
 	font-size: 100%;
 	font-family: 'Times New Roman', serif; 
+	margin: 0;
 }
+
 
 .wrapper {
 	width: 960px;
@@ -17,12 +19,36 @@ body {
 	padding: 0 45px 20px;
 }
 
-.small {
-    font-size: 0.8em;
+div {
+    display: block;
 }
 
-h1 h2 {
+
+h1 {
+  padding-bottom: 10px;
   color: rgb(146,175,166);
+  font-family: 'Baskerville', serif;
+  font-size: 5em;
+  border-bottom: 1px solid #ccc;
+  margin: 0 0 5px;
+}
+
+#featured img {
+    border: 5px rgb(152,173,166) solid;
+}
+
+h2 {
+    color: rgb(111,127,122);
+    font-size: 2em;
+}
+
+#press img {
+    border: 5px #ccc solid;
+    padding: 1px;
+}
+
+.small {
+    font-size: 0.8em;
 }
 
 /* Write all remaining styles here */
